# RhythmPy

./: .gitignore  Build.py  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: Build.yml  Format.yml  Lint.yml  autoblack.yml
Mania Bot/: Config.json  Main.py  Main.spec  Screen Cap Compare.py  Setup.py  requirements.txt
Mania Bot/Bot/: Osu4K.py  Osu7K.py  Quaver4K.py  Quaver7K.py  Test.py  Update.py  Windowcapture.py  __init__.py
Mania Bot/Tests/: Compare Images.py  Compare Speed Test.py  Pixel color live.py  Screen Cap.py  Screenshot + Compare.py  Screenshot Speed Test.py  Video Compare.py  pixel tests.py
Mania Bot/src/: Config.py  DirectInput.py  FirstRun.py  GameInput.py  Logger.py  ProcessCheck.py  Settings.py  Test.py  UI_Main.py  UI_Settings.py  Update.py  __init__.py  __main__.py  __main__.spec
Mania Bot/src/Modules/: Config.py  Logger.py  Windowcapture.py  __init__.py
Mania Bot/src/UI/: Settings.py  ui.py
PyRhythm/: Main.spec  Setup.py  requirements.txt
PyRhythm/src/: FirstRun.py  Test.py  __main__.py  __main__.spec
PyRhythm/src/Modules/: Update.py  __main__.py
RhythmPy/: Cli.py  Gui.py  Main.py  Main.spec  Old.py  RhythmPy.spec  RhythmPyDev.spec  Settings.py  Setup.py  SplashScreen.py  Test.py  __main__.py
RhythmPy/Config/: Quaver4K.json  Settings.json
RhythmPy/Core/: CloseGlobal.py  DirectInput.py  Logger.py  ProcessCheck.py  WindowCapture.py  __init__.py
RhythmPy/Core/Bot/: Mania4k.py  Mania7k.py  Worker.py  __init__.py  __main__.py
RhythmPy/Core/Cli/: __main__.py
RhythmPy/Core/Editor/: HexToRgb.py  __init__.py  __main__.py
RhythmPy/Core/FileManager/: CreateAppdataDir.py  CreateConfigFiles.py  CreateConfigFolder.py  CreatePluginFolder.py  DefualtConfigs.py  FmLogger.py  LoadConfig.py  LoadSettings.py  Paths.py  __init__.py
RhythmPy/Core/Gui/: CenterWindow.py  FirstRun.py  ResizeImage.py  Settings.py  SplashScreen.py  __init__.py  __main__.py
RhythmPy/Core/Linux/: CheckFFmpeg.PY  WindowCapture.py  __init__.py
RhythmPy/Core/Settings/: __main__.py
RhythmPy/Core/Windows/: ApplySkins.py  DirectInput.py  WindowCapture.py  __init__.py
RhythmPy/Installer/: CMakeLists.txt
RhythmPy/Installer/src/: main.cpp
RhythmPy/Modules/: CenterWindow.py  CloseGlobal.py  CreateAppdata.py  FileManager.py  FirstRun.py  GameInput.py  Logger.py  ProcessCheck.py  ResizeImage.py  Update.py  UpdateConfig.py  Windowcapture.py  __init__.py
RhythmPy/Modules/FileManager/: CreateAppdataDir.py  CreateConfigFiles.py  CreateConfigFolder.py  DefualtConfigs.py  FmLogger.py  LoadConfig.py  LoadSettings.py  Logger.py  Paths.py  __init__.py
RhythmPy/Modules/Gui/: ResizeImage.py  __init__.py
RhythmPy/RhythmPy/: Gui.py  Old.py
RhythmPy/RhythmPy/Core/: CloseGlobal.py  (+1 more)
RhythmPy/Updater/: CMakeLists.txt
RhythmPy/Updater/src/: Commands.hpp  main.cpp
RhythmPy/Updater/src/Commands/: CheckUpdate.cpp  Help.cpp  Update.cpp
RhythmPy/Updater/src/Include/: Help.hpp
RhythmPy/src/: Dev-Installer.nsi  FirstRun.py  Settings.py  SplashScreen.py  __main__.py
RhythmPys/: Main.py
RhythmPys/src/: __main__.spec
Tests/: Calculator.py  Pixel color live.py  Screen Cap.py  ScreenCords.py  VirtualKeyboard.py  pixel tests.py
(+21 files in other folders)
