[tool.poetry]
name = "RhythmPsy"
version = "0.2.0"
description = "A rhythm game bot"
authors = ["assassinsorrow <assassinsorrows@gmail.com>"]
license = "APGL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
pywin32 = "^300"
psutil = "^5.8.0"
Pillow = "^8.1.0"
opencv-python = "^4.5.1"
numpy = "^1.19.5"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pyinstaller = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
