[tool.poetry]
name = "RhythmPy"
version = "0.3.0"
description = "A rhythm game bot"
authors = ["assassinsorrow <49711232+assassinsorrow@users.noreply.github.com>"]
license = "APGL-3.0"
repository = "https://github.com/assassinsorrow/RhythmPy"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.8.0"
Pillow = "^8.1.0"
opencv-python = "^4.5.1"
numpy = "^1.19.5"
requests = "^2.25.1"
pyinstaller = {version = "*", optional = true}
pywin32 = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.8.4"

[tool.poetry.extras]
Windows = ["pywin32"]
pyinstaller = ["pyinstaller"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
